--- a/style.css
+++ b/style.css
@@ -483,7 +483,7 @@ body{
 .recent_experiment{
     margin-top: 60px;
     width: 563px;
-    margin-left: 164px;
+    
     border-top: 0.5px solid black;
 
 }
@@ -491,7 +491,7 @@ body{
     /* border: 1px solid tomato; */
     width: 340px;
     height: 940px;
-    margin-left: 90px;
+    margin-left: 50px;
     margin-top: 60px;
     padding: 30px 35px 0px 35px;
     
@@ -562,7 +562,7 @@ body{
     background-position: center;
 }
 #im5{
-    background-image: url(https://storage.googleapis.com/gweb-experiments.appspot.com/8993-Don%27t%20Touch%20The%20Art_HeroImage_02.gif);
+    background-image: url(src/img/im5.gif);
     background-size: cover;
     background-position: center;
 }
@@ -793,5 +793,4 @@ body{
 }
 .cross:hover{
     opacity: 0.5;
-
 }
